--- a/nailedit-uf-api.html
+++ b/nailedit-uf-api.html
@@ -262,7 +262,7 @@
                 try {
                     // Attempt direct fetch. Requires S3 bucket to have permissive CORS settings
                     // for GET requests from the origin this HTML is served from.
-                    const response = await fetch(imageUrl, { mode: "cors" }); // Explicitly use cors mode
+                    const response = await fetch(imageUrl);
                     if (!response.ok) {
                         // If direct fetch fails, throw an error explaining potential CORS issue
                         throw new Error(
