--- a/nailedit-uf-api.html
+++ b/nailedit-uf-api.html
@@ -265,10 +265,10 @@
              * @param {string} imageUrl - The URL of the image to fetch.
              * @returns {Promise<Blob>} - A promise that resolves to the image blob.
              */
-            async function fetchImageBlob(imageUrl, { mode: "cors", cache: "no-cache" }) {
+            async function fetchImageBlob(imageUrl) {
                 try {
                     // Assumes S3 bucket has permissive CORS settings for GET requests from this origin
-                    const response = await fetch(imageUrl);
+                    const response = await fetch(imageUrl, { mode: "cors", cache: "no-cache" });
                     if (!response.ok) {
                         throw new Error(
                             `Image fetch failed: ${response.status} ${response.statusText}. Check browser console and S3 bucket CORS configuration for ${new URL(imageUrl).origin}.`,
